# VoxOx

./: CMakeLists.txt  DEBUGGING.txt  DefineCPackDefaults.cmake  DefineInstallationPaths.cmake  DefineWengoOptions.cmake  Doxyfile  INSTALL.txt  wengophone_lang.bat
crashreport/: CMakeLists.txt  CrashReport.ui  FtpUpload.cpp  FtpUpload.h  QtCrashReport.cpp  QtCrashReport.h  crashreport.xml  main.cpp
libs/owutil/: CMakeLists.txt  Doxyfile
libs/owutil/cutil/: CMakeLists.txt  dllexport.h  global.h  owcutildll.h  safe-strings.h
libs/owutil/cutil/msvc/: README  dirent.h
libs/owutil/cutil/src/: fake.c  strlcat.c  strlcpy.c
libs/owutil/cutil/strndup/: strndup.h
libs/owutil/http/: CMakeLists.txt  HttpRequest.h  IHttpRequest.h  owhttpdll.h
libs/owutil/http/src/: HttpRequest.cpp  HttpRequestFactory.h
libs/owutil/http/tests/: CurlHttpRequestTest.h  HttpRequestTest.h  NullHttpRequestTest.h  QtHttpRequestTest.h
libs/owutil/memorydump/: CMakeLists.txt  MACMemoryDump.h  MSVCMemoryDump.h  MemoryDump.h  UNIXMemoryDump.h  owmemorydumpdll.h
libs/owutil/memorydump/src/: MemoryDump.cpp
libs/owutil/serialization/: CMakeLists.txt  Serializable.h  Storage.h  owserializationdll.h
libs/owutil/serialization/src/: fake.cpp
libs/owutil/serializer/: CMakeLists.txt  DateXMLSerializer.h  TimeXMLSerializer.h  VoxJSONSerializerBase.h  VoxQueryResultXMLSerializer.h  VoxXMLSerializerBase.h  owserializerdll.h
libs/owutil/serializer/src/: DateXMLSerializer.cpp  TimeXMLSerializer.cpp  VoxJSONSerializerBase.cpp  VoxQueryResultXMLSerializer.cpp  VoxXMLSerializerBase.cpp
libs/owutil/settings/: CMakeLists.txt  CascadingSettings.h  CascadingSettingsXMLSerializer.h  Settings.h  SettingsSerializer.h  SettingsXMLSerializer.h  StringListXMLSerializer.h  owsettingsdll.h
libs/owutil/settings/src/: CascadingSettings.cpp  CascadingSettingsXMLSerializer.cpp  Settings.cpp  SettingsXMLSerializer.cpp  StringListXMLSerializer.cpp
libs/owutil/settings/tests/: CMakeLists.txt  SettingsTest.h  main.cpp
libs/owutil/shlibloader/: CMakeLists.txt  ISharedLibLoader.h  SharedLibLoader.h  owshlibloaderdll.h
libs/owutil/shlibloader/src/: SharedLibLoader.cpp
libs/owutil/shlibloader/tests/: dlltest.cpp  dlltest.h  main.cpp
libs/owutil/socket/: CMakeLists.txt  ClientSocket.h  ServerSocket.h  owsocketdll.h
libs/owutil/socket/src/: ClientSocket.cpp  ServerSocket.cpp  SocketCommon.h
libs/owutil/system/: CMakeLists.txt  Processes.h  RegisterProtocol.h  Startup.h  WindowsRegistry.h  WindowsVersion.h  owsystemdll.h
libs/owutil/system/src/: RegisterProtocol.cpp
libs/owutil/thread/: CMakeLists.txt  Condition.h  Lockable.h  Mutex.h  RecursiveMutex.h  Thread.h  ThreadEvent.h  Timer.h  TryMutex.h  owthreaddll.h
libs/owutil/thread/src/: Lockable.cpp  Thread.cpp  Timer.cpp
libs/owutil/thread/tests/: CMakeLists.txt  TimerTest.h  main.cpp
libs/owutil/util/: Base64.h  CMakeLists.txt  Cloneable.h  CountryList.h  Date.h  Event.h  File.h  IPostEvent.h  Identifiable.h  Interface.h  List.h  Logger.h  NonCopyable.h  OWPicture.h  Path.h  Platform.h  SafeDelete.h  SharedPtr.h  Singleton.h  Slot.h  Startup.h  String.h  StringList.h  ThreadEvent.h  Time.h  Trackable.h  TwoWayMap.h  Uuid.h  VoxApiTimer.h  VoxElapsedTimer.h  VoxEncrypt.h  VoxMd5.h  WebBrowser.h  owutildll.h
libs/owutil/util/src/: Base64.cpp  CountryList.cpp  Date.cpp  File.cpp  Identifiable.cpp  Logger.cpp  NonCopyable.cpp  OWPicture.cpp  Path.cpp  Platform.cpp  Startup.cpp  String.cpp  StringList.cpp  Time.cpp  Uuid.cpp  VoxApiTimer.cpp  VoxElapsedTimer.cpp  VoxEncrypt.cpp  VoxMd5.cpp  WebBrowser.cpp  md5.c
libs/owutil/util/tests/: CMakeLists.txt  EventTest.cpp  FileTest.h  LoggerTest.cpp  StringListTest.h  StringTest.h  main.cpp
libs/pixertool/: CMakeLists.txt  config.h.cmake
libs/pixertool/include/pixertool/: directx-pixertool.h  ffmpeg-pixertool.h  owpixertooldll.h  pixertool.h  pixertooldll.h  quicktime-pixertool.h  v4l-pixertool.h  v4l2-pixertool.h
libs/pixertool/src/: null-pixertool.cpp  pixertool.cpp
libs/pixertool/src/directx/: directx-pixertool.cpp
libs/pixertool/src/ffmpeg/: ffmpeg-pixertool.c
libs/pixertool/src/quicktime/: quicktime-pixertool.c
libs/pixertool/src/v4l/: v4l-pixertool.c
libs/pixertool/src/v4l2/: v4l2-pixertool.c
libs/pixertool/tests/: PixerToolTest.cpp  PixerToolTest.h
libs/skinstyle/: CMakeLists.txt  Doxyfile  skinstyle.pro
libs/skinstyle/src/: SkinButton.cpp  SkinButton.h  SkinInfoReader.cpp  SkinInfoReader.h  SkinStyle.cpp  SkinStyle.h  SkinWidget.cpp  SkinWidget.h  SkinWindow.cpp  SkinWindow.h
libs/skinstyle/tests/demo1/: AboutWindow.ui  MainWindow.ui  SkinDemo.cpp  SkinDemo.h
libs/skinstyle/tests/winamp/: MainWindow.ui  SkinDemo.cpp  SkinDemo.h  demo.pro  main.cpp  skinstyle.bat
libs/tinyxml/: CMakeLists.txt  tinyxml.h
libs/webcam/: CMakeLists-owbuild.txt  CMakeLists.txt
libs/webcam/include/webcam/: DefaultWebcamDriverFactory.h  DirectXWebcamDriver.h  DirectXWebcamDriverFactory.h  DirectXWebcamUtils.h  IWebcamDriver.h  NullWebcamDriver.h  NullWebcamDriverFactory.h  QuicktimeWebcamDriver.h  QuicktimeWebcamDriverFactory.h  V4L2WebcamDriver.h  V4L2WebcamDriverFactory.h  V4LWebcamDriver.h  V4LWebcamDriverFactory.h  WebcamDriver.h  WebcamDriverFactory.h  owwebcamdll.h  webcam.h  webcamdll.h
libs/webcam/src/: WebcamDriver.cpp  webcam.cpp
libs/webcam/src/directx/: DirectXWebcamDriver.cpp  DirectXWebcamUtils.cpp
libs/webcam/src/null/: NullWebcamDriver.cpp
libs/webcam/src/quicktime/: QuicktimeWebcamDriver.cpp
libs/webcam/src/v4l/: V4LWebcamDriver.cpp
libs/webcam/src/v4l2/: V4L2WebcamDriver.cpp
libs/webcam/tests/: CMakeLists.txt
libs/webcam/tests/multi-visu/: CMakeLists.txt  VideoWindow.cpp  VideoWindow.h  main.cpp
libs/webcam/tests/unit/: DirectXWebcamDriverTest.h  NullWebcamDriverTest.h  QuicktimeWebcamDriverTest.h  V4LWebcamDriverTest.h  WebcamTest.cpp
libs/webcam/tests/visu-c/: CMakeLists.txt  (+2 more)
wifo/phapi/amr/: Makefile.am  Makefile.in  amr.h  cnst.h  decoder.c  dtx_enc.c  sp_enc.c
wifo/phapi/amrwb/: CMakeLists.txt  Makefile.am  Makefile.in  dec_dtx.c  enc_if.c  typedef.h
(+2254 files in other folders)
