if COMPILE_PHAPI
lib_LIBRARIES = libamrwb.a
endif

EXTRA_DIST = dec_acelp.h dec_dtx.h dec_gain.h dec.h dec_if.h dec_lpc.h dec_main.h dec_util.h enc_acelp.h enc_dtx.h enc_gain.h enc.h enc_if.h enc_lpc.h enc_main.h enc_util.h if_rom.h typedef.h




libamrwb_a_SOURCES =  enc_acelp.c enc_dtx.c enc_gain.c enc_if.c enc_lpc.c enc_main.c enc_rom.c enc_util.c encoder.c if_rom.c \
			dec_acelp.c dec_dtx.c dec_gain.c dec_if.c dec_lpc.c dec_main.c dec_rom.c dec_util.c decoder.c if_rom.c


