
EXTRA_DIST = 	eXosip.dsp 		\
		eXosip_lib.dsp		\
		gsm.dsp			\
		ilbc.dsp		\
		phapicl.dsp		\
		phapi.dsp		\
	    	eXosip.dsw 		\
	   	eXosip.def 		\
		eXosip.vcproj 		\
		phapi.vcproj 		\
		phapicl.vcproj		\
		gsm.vcproj		\
		ilbc.vcproj		\
		amrwb.vcproj		\
		amrnb.vcproj		\
		phapiserver.vcproj 	\
		miniua.vcproj
